Quito etiqueta draft=true en el primer post para que aparesca

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -87,7 +87,7 @@ En mi tiempo libre, me gusta colaborar en proyectos de software libre los que me
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://www.richardpalaciosg.dev/about">About</a></li><li><a href="https://www.richardpalaciosg.dev/post">Blog</a></li><li><a href="https://www.richardpalaciosg.dev/projects">Projects</a></li>
+    <ul class="menu__inner"><li><a href="https://www.richardpalaciosg.dev/about">About</a></li><li><a href="https://www.richardpalaciosg.dev/posts">Blog</a></li><li><a href="https://www.richardpalaciosg.dev/projects">Projects</a></li>
     </ul>
 </nav>
 
