--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -84,7 +84,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://www.richardpalaciosg.dev/about">About</a></li><li><a href="https://www.richardpalaciosg.dev/post">Blog</a></li><li><a href="https://www.richardpalaciosg.dev/projects">Projects</a></li>
+    <ul class="menu__inner"><li><a href="https://www.richardpalaciosg.dev/about">About</a></li><li><a href="https://www.richardpalaciosg.dev/posts">Blog</a></li><li><a href="https://www.richardpalaciosg.dev/projects">Projects</a></li>
     </ul>
 </nav>
 
